bindings/c/include/wickra.h

typedef struct RollingQuantile RollingQuantile;
typedef struct RoofingFilter RoofingFilter;
typedef struct Rsi Rsi;
typedef struct Rsx Rsx;
typedef struct RviVolatility RviVolatility;
typedef struct SampleEntropy SampleEntropy;
typedef struct ShannonEntropy ShannonEntropy;
typedef struct SharpeRatio SharpeRatio;
typedef struct SineWave SineWave;
typedef struct SineWeightedMa SineWeightedMa;
typedef struct Skewness Skewness;
typedef struct Sma Sma;
typedef struct Smma Smma;
typedef struct SortinoRatio SortinoRatio;
typedef struct StandardError StandardError;
typedef struct Stc Stc;
typedef struct StdDev StdDev;
typedef struct StepTrailingStop StepTrailingStop;
typedef struct SterlingRatio SterlingRatio;
void wickra_rolling_quantile_free(struct RollingQuantile *handle);
struct RoofingFilter *wickra_roofing_filter_new(uintptr_t lp_period, uintptr_t hp_period);
double wickra_roofing_filter_update(struct RoofingFilter *handle, double value);
void wickra_roofing_filter_batch(struct RoofingFilter *handle,
                                 const double *input,
                                 double *out,
                                 uintptr_t n);
void wickra_roofing_filter_reset(struct RoofingFilter *handle);
void wickra_roofing_filter_free(struct RoofingFilter *handle);
struct Rsi *wickra_rsi_new(uintptr_t period);
double wickra_rsi_update(struct Rsi *handle, double value);
void wickra_rsi_batch(struct Rsi *handle, const double *input, double *out, uintptr_t n);
void wickra_rsi_reset(struct Rsi *handle);
void wickra_rsi_free(struct Rsi *handle);
struct Rsx *wickra_rsx_new(uintptr_t length);
double wickra_rsx_update(struct Rsx *handle, double value);
void wickra_rsx_batch(struct Rsx *handle, const double *input, double *out, uintptr_t n);
void wickra_rsx_reset(struct Rsx *handle);
void wickra_rsx_free(struct Rsx *handle);
struct RviVolatility *wickra_rvi_volatility_new(uintptr_t period);
double wickra_rvi_volatility_update(struct RviVolatility *handle, double value);
void wickra_rvi_volatility_batch(struct RviVolatility *handle,
                                 const double *input,
                                 double *out,
                                 uintptr_t n);
void wickra_rvi_volatility_reset(struct RviVolatility *handle);
void wickra_rvi_volatility_free(struct RviVolatility *handle);
struct SampleEntropy *wickra_sample_entropy_new(uintptr_t period, uintptr_t m, double r_factor);
double wickra_sample_entropy_update(struct SampleEntropy *handle, double value);
void wickra_sample_entropy_batch(struct SampleEntropy *handle,
                                 const double *input,
                                 double *out,
                                 uintptr_t n);
void wickra_sample_entropy_reset(struct SampleEntropy *handle);
void wickra_sample_entropy_free(struct SampleEntropy *handle);
struct ShannonEntropy *wickra_shannon_entropy_new(uintptr_t period, uintptr_t bins);
double wickra_shannon_entropy_update(struct ShannonEntropy *handle, double value);
void wickra_shannon_entropy_batch(struct ShannonEntropy *handle,
                                  const double *input,
                                  double *out,
                                  uintptr_t n);
void wickra_shannon_entropy_reset(struct ShannonEntropy *handle);
void wickra_shannon_entropy_free(struct ShannonEntropy *handle);
struct SharpeRatio *wickra_sharpe_ratio_new(uintptr_t period, double risk_free);
double wickra_sharpe_ratio_update(struct SharpeRatio *handle, double value);
void wickra_sharpe_ratio_batch(struct SharpeRatio *handle,
                               const double *input,
                               double *out,
                               uintptr_t n);
void wickra_sharpe_ratio_reset(struct SharpeRatio *handle);
void wickra_sharpe_ratio_free(struct SharpeRatio *handle);
struct SineWave *wickra_sine_wave_new(void);
double wickra_sine_wave_update(struct SineWave *handle, double value);
void wickra_sine_wave_batch(struct SineWave *handle, const double *input, double *out, uintptr_t n);
void wickra_sine_wave_reset(struct SineWave *handle);
void wickra_sine_wave_free(struct SineWave *handle);
struct SineWeightedMa *wickra_sine_weighted_ma_new(uintptr_t period);
double wickra_sine_weighted_ma_update(struct SineWeightedMa *handle, double value);
void wickra_sine_weighted_ma_batch(struct SineWeightedMa *handle,
                                   const double *input,
                                   double *out,
                                   uintptr_t n);
void wickra_sine_weighted_ma_reset(struct SineWeightedMa *handle);
void wickra_sine_weighted_ma_free(struct SineWeightedMa *handle);
struct Skewness *wickra_skewness_new(uintptr_t period);
double wickra_skewness_update(struct Skewness *handle, double value);
void wickra_skewness_batch(struct Skewness *handle, const double *input, double *out, uintptr_t n);
void wickra_skewness_reset(struct Skewness *handle);
void wickra_skewness_free(struct Skewness *handle);
struct Sma *wickra_sma_new(uintptr_t period);
double wickra_sma_update(struct Sma *handle, double value);
void wickra_sma_batch(struct Sma *handle, const double *input, double *out, uintptr_t n);
void wickra_sma_reset(struct Sma *handle);
void wickra_sma_free(struct Sma *handle);
struct Smma *wickra_smma_new(uintptr_t period);
double wickra_smma_update(struct Smma *handle, double value);
void wickra_smma_batch(struct Smma *handle, const double *input, double *out, uintptr_t n);
void wickra_smma_reset(struct Smma *handle);
void wickra_smma_free(struct Smma *handle);
struct SortinoRatio *wickra_sortino_ratio_new(uintptr_t period, double mar);
double wickra_sortino_ratio_update(struct SortinoRatio *handle, double value);
void wickra_sortino_ratio_batch(struct SortinoRatio *handle,
                                const double *input,
                                double *out,
                                uintptr_t n);
void wickra_sortino_ratio_reset(struct SortinoRatio *handle);
void wickra_sortino_ratio_free(struct SortinoRatio *handle);
struct StandardError *wickra_standard_error_new(uintptr_t period);
double wickra_standard_error_update(struct StandardError *handle, double value);
void wickra_standard_error_batch(struct StandardError *handle,
                                 const double *input,
                                 double *out,
                                 uintptr_t n);
void wickra_standard_error_reset(struct StandardError *handle);
void wickra_standard_error_free(struct StandardError *handle);
struct Stc *wickra_stc_new(uintptr_t fast, uintptr_t slow, uintptr_t schaff_period, double factor);
double wickra_stc_update(struct Stc *handle, double value);
void wickra_stc_batch(struct Stc *handle, const double *input, double *out, uintptr_t n);
void wickra_stc_reset(struct Stc *handle);
void wickra_stc_free(struct Stc *handle);
struct StdDev *wickra_std_dev_new(uintptr_t period);
double wickra_std_dev_update(struct StdDev *handle, double value);
void wickra_std_dev_batch(struct StdDev *handle, const double *input, double *out, uintptr_t n);
void wickra_std_dev_reset(struct StdDev *handle);
void wickra_std_dev_free(struct StdDev *handle);
struct StepTrailingStop *wickra_step_trailing_stop_new(double step_size);
double wickra_step_trailing_stop_update(struct StepTrailingStop *handle, double value);
void wickra_step_trailing_stop_batch(struct StepTrailingStop *handle,
                                     const double *input,
                                     double *out,
                                     uintptr_t n);
void wickra_step_trailing_stop_reset(struct StepTrailingStop *handle);
void wickra_step_trailing_stop_free(struct StepTrailingStop *handle);
struct SterlingRatio *wickra_sterling_ratio_new(uintptr_t period);
double wickra_sterling_ratio_update(struct SterlingRatio *handle, double value);
void wickra_sterling_ratio_batch(struct SterlingRatio *handle,
                                 const double *input,
                                 double *out,
                                 uintptr_t n);
void wickra_sterling_ratio_reset(struct SterlingRatio *handle);
void wickra_sterling_ratio_free(struct SterlingRatio *handle);