bindings/csharp/Wickra/Generated/NativeMethods.g.cs


    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_rolling_quantile_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_roofing_filter_new(nuint lpPeriod, nuint hpPeriod);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_roofing_filter_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_roofing_filter_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_roofing_filter_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_roofing_filter_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_rsi_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_rsi_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_rsi_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_rsi_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_rsi_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_rsx_new(nuint length);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_rsx_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_rsx_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_rsx_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_rsx_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_rvi_volatility_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_rvi_volatility_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_rvi_volatility_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_rvi_volatility_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_rvi_volatility_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_sample_entropy_new(nuint period, nuint m, double rFactor);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_sample_entropy_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_sample_entropy_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_sample_entropy_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_sample_entropy_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_shannon_entropy_new(nuint period, nuint bins);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_shannon_entropy_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_shannon_entropy_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_shannon_entropy_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_shannon_entropy_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_sharpe_ratio_new(nuint period, double riskFree);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_sharpe_ratio_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_sharpe_ratio_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_sharpe_ratio_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_sharpe_ratio_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_sine_wave_new();

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_sine_wave_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_sine_wave_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_sine_wave_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_sine_wave_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_sine_weighted_ma_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_sine_weighted_ma_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_sine_weighted_ma_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_sine_weighted_ma_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_sine_weighted_ma_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_skewness_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_skewness_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_skewness_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_skewness_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_skewness_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_sma_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_sma_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_sma_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_sma_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_sma_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_smma_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_smma_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_smma_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_smma_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_smma_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_sortino_ratio_new(nuint period, double mar);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_sortino_ratio_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_sortino_ratio_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_sortino_ratio_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_sortino_ratio_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_standard_error_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_standard_error_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_standard_error_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_standard_error_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_standard_error_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_stc_new(nuint fast, nuint slow, nuint schaffPeriod, double factor);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_stc_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_stc_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_stc_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_stc_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_std_dev_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_std_dev_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_std_dev_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_std_dev_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_std_dev_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_step_trailing_stop_new(double stepSize);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_step_trailing_stop_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_step_trailing_stop_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_step_trailing_stop_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_step_trailing_stop_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_sterling_ratio_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_sterling_ratio_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_sterling_ratio_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_sterling_ratio_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_sterling_ratio_free(nint handle);
